--- a/public/stylesheets/sass/reset.sass
+++ b/public/stylesheets/sass/reset.sass
@@ -83,9 +83,7 @@ dl,  dt,  dd,  ol
   :list-style none
 
 
- li, 
-fieldset,  form,  label,  legend, 
-table,  caption,  tbody,  tfoot,  thead,  tr
+li, fieldset,  form,  label,  legend, table,  caption,  tbody,  tfoot,  thead,  tr, button
   :margin 0
   :padding 0
   :border 0
