--- a/public/stylesheets/sass/reset.sass
+++ b/public/stylesheets/sass/reset.sass
@@ -1,5 +1,4 @@
-html,  body,  div,  span,  applet,  object,  iframe, 
-h1,  h2,  h3,  h4,  h5,  h6,  p
+html,  body,  div,  span,  applet,  object,  iframe, h1,  h2,  h3,  h4,  h5,  h6,  p
   :margin 0
   :padding 0
   :border 0
@@ -11,7 +10,7 @@ h1,  h2,  h3,  h4,  h5,  h6,  p
   :vertical-align baseline
 
 
- blockquote
+blockquote
   :margin 0
   :padding 0
   :border 0
@@ -26,9 +25,7 @@ h1,  h2,  h3,  h4,  h5,  h6,  p
     :content ""
 
 
- pre, 
-a,  abbr,  acronym,  address,  big,  cite,  code, 
-del,  dfn,  em,  font,  img,  ins,  kbd
+pre, a,  abbr,  acronym,  address,  big,  cite,  code, del,  dfn,  em,  font,  img,  ins,  kbd
   :margin 0
   :padding 0
   :border 0
@@ -40,7 +37,7 @@ del,  dfn,  em,  font,  img,  ins,  kbd
   :vertical-align baseline
 
 
- q
+q
   :margin 0
   :padding 0
   :border 0
@@ -56,9 +53,7 @@ del,  dfn,  em,  font,  img,  ins,  kbd
     :content ""
 
 
- s,  samp, 
-small,  strike,  strong,  sub,  sup,  tt,  var, 
-dl,  dt,  dd,  ol
+s,  samp, small,  strike,  strong,  sub,  sup,  tt,  var, dl,  dt,  dd,  ol
   :margin 0
   :padding 0
   :border 0
@@ -70,7 +65,7 @@ dl,  dt,  dd,  ol
   :vertical-align baseline
 
 
- ul
+ul
   :margin 0
   :padding 0
   :border 0
@@ -95,7 +90,7 @@ li, fieldset,  form,  label,  legend, table,  caption,  tbody,  tfoot,  thead,  
   :vertical-align baseline
 
 
- th,  td
+th,  td
   :margin 0
   :padding 0
   :border 0
@@ -109,8 +104,8 @@ li, fieldset,  form,  label,  legend, table,  caption,  tbody,  tfoot,  thead,  
   :font-weight normal
 
 
-:focus
-  :outline 0
+  :focus
+    :outline 0
 
 
 body
