Added all featured lists to mockup

--- a/app/views/mockups/home_page.html.haml
+++ b/app/views/mockups/home_page.html.haml
@@ -1,11 +1,6 @@
 %h1.logo
   %a{ :href => '/', :title => 'Reasons to Love' } Reasons to Love
 
-%h2.tagline Love something, someone or someplace?
-
-%h3.instructions
-  Contribute your reasons to existing lists or create your own reason list about any subject.
-
 %form{:action => '/whatever', :method => 'post', :class => 'create-list'}
   %label What do you love?
   %input{:id => 'create-list', :type => 'text'}/
@@ -14,18 +9,33 @@
   /%input{:type => 'image', :src => '/images/button-create-list.png'}/
 
 .blue-box
-  %h3 The Most Voted on Lists
-  %ul
-    %li
-      Thanksgiving Day - (11 reasons to love)
-    %li
-      New York City - (7 reasons to love)
-    %li
-      Cats - (6 reasons to love)
-    %li
-      George W Bush - (5 reasons to love)
-    %li
-      Halloween - (5 reasons to love)
-    %li
-      My best friend Kara - (5 reasons to love)
+  #featured
+    %h3 The Most Voted on Lists
+    %ul
+      %li
+        Thanksgiving Day - (11 reasons to love)
+      %li
+        New York City - (7 reasons to love)
+      %li
+        Cats - (6 reasons to love)
+      %li
+        George W Bush - (5 reasons to love)
+      %li
+        Halloween - (5 reasons to love)
+      %li
+        My best friend Kara - (5 reasons to love)
+    %h3 The Most Recently Created Lists
+    %ul
+      %li
+        Thanksgiving Day - (11 reasons to love)
+      %li
+        New York City - (7 reasons to love)
+      %li
+        Cats - (6 reasons to love)
+      %li
+        George W Bush - (5 reasons to love)
+      %li
+        Halloween - (5 reasons to love)
+      %li
+        My best friend Kara - (5 reasons to love)
 
