Adjusted spacing in "create list" form and submit button color/size

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -71,7 +71,7 @@ form.create-list
   :margin 35px auto
   :width 785px
   :height 120px
-  :padding-top 35px
+  :padding-top 29px
   :background url(/images/create-list.png) no-repeat
   input#list-name
     :margin-right 10px
@@ -83,7 +83,7 @@ form.create-list
     &:focus, &:hover
       :background-color #FFFFCC
   button
-    :background-color #f5f5f5
+    :background-color #fff
     :border 1px solid #dedede
     :border-top 1px solid #eee
     :border-left 1px solid #eee
@@ -96,7 +96,7 @@ form.create-list
     :cursor pointer
     :width auto
     :overflow visible
-    :padding 4px 10px 3px 7px
+    :padding 10px 10px 9px 7px
 
     &[type]
       :line-height 17px
