Began formatting featured boxes

--- a/app/views/mockups/home_page.html.haml
+++ b/app/views/mockups/home_page.html.haml
@@ -9,33 +9,33 @@
   /%input{:type => 'image', :src => '/images/button-create-list.png'}/
 
 .blue-box
-  #featured
-    %h3 The Most Voted on Lists
-    %ul
-      %li
-        Thanksgiving Day - (11 reasons to love)
-      %li
-        New York City - (7 reasons to love)
-      %li
-        Cats - (6 reasons to love)
-      %li
-        George W Bush - (5 reasons to love)
-      %li
-        Halloween - (5 reasons to love)
-      %li
-        My best friend Kara - (5 reasons to love)
-    %h3 The Most Recently Created Lists
-    %ul
-      %li
-        Thanksgiving Day - (11 reasons to love)
-      %li
-        New York City - (7 reasons to love)
-      %li
-        Cats - (6 reasons to love)
-      %li
-        George W Bush - (5 reasons to love)
-      %li
-        Halloween - (5 reasons to love)
-      %li
-        My best friend Kara - (5 reasons to love)
+  %h3 The Most Voted on Lists
+  %ul
+    %li
+      Thanksgiving Day - (11 reasons to love)
+    %li
+      New York City - (7 reasons to love)
+    %li
+      Cats - (6 reasons to love)
+    %li
+      George W Bush - (5 reasons to love)
+    %li
+      Halloween - (5 reasons to love)
+    %li
+      My best friend Kara - (5 reasons to love)
+.red-box
+  %h3 The Most Recently Created Lists
+  %ul
+    %li
+      Thanksgiving Day - (11 reasons to love)
+    %li
+      New York City - (7 reasons to love)
+    %li
+      Cats - (6 reasons to love)
+    %li
+      George W Bush - (5 reasons to love)
+    %li
+      Halloween - (5 reasons to love)
+    %li
+      My best friend Kara - (5 reasons to love)
 
