--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -107,3 +107,9 @@ form.create-list
       :border none
       :width 16px
       :height 16px
+
+div.blue-box h3
+  :background url(/images/blue-box-header.png) no-repeat center
+  :height 60px
+  :text-indent -9999px
+div.blue-box
